<resources>
    <string name="app_name">GS1Beacon</string>
    <string name="action_beacon">Beacon Scan</string>
    <string name="action_barcode">Barcode Scan</string>
    <string name="action_wifiap">WiFi Scan</string>
    <string name="action_filter">Filtered Services</string>
    <string name="action_settings">Settings</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="ble_not_supported">BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Please turn on the Bluetooth before running application.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="label_device_address">Name:</string>
    <string name="label_data">GS1 key:</string>
    <string name="no_data">No Data</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_checkAll">Check All</string>
    <string name="menu_checkClear">Clear All</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="gs1_wifiap">GS1 on the WiFi AP</string>
    <string name="gs1ap_list">GS1 WiFi AP list</string>
    <string name="normalap_list">Normal WiFi AP list</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
