<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingActivity">

    <item android:id="@+id/menu_check"
        android:title="@string/menu_checkAll"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_clear"
        android:title="@string/menu_checkClear"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_beacon"
        android:orderInCategory="102"
        android:title="@string/action_beacon"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_barcode"
        android:orderInCategory="103"
        android:title="@string/action_barcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="104"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wifiap"
        android:orderInCategory="105"
        android:title="@string/action_wifiap"
        app:showAsAction="never" />

</menu>