<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BeaconActivity">

    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_barcode"
        android:orderInCategory="103"
        android:title="@string/action_barcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="104"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
