<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WiFiActivity">

    <item
        android:id="@+id/action_beacon"
        android:orderInCategory="100"
        android:title="@string/action_beacon"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_barcode"
        android:orderInCategory="101"
        android:title="@string/action_barcode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_wifiap"
        android:orderInCategory="101"
        android:title="@string/action_wifiap"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
